--- a/style.css
+++ b/style.css
@@ -34,3 +34,15 @@
     white 52%
   );
 }
+
+input.orlaterbox { display:none; } /* to hide the checkbox itself */
+input.orlaterbox + label:before {
+  font-family: FontAwesome;
+  display: inline-block;
+}
+
+input.orlaterbox + label:before { content: "\f096"; } /* unchecked icon */
+/*input#orlaterbox + label:before { letter-spacing: 5px; }*/
+
+input.orlaterbox:checked + label:before { content: "\f067"; } /* checked icon */
+/*input#orlaterbox:checked + label:before { letter-spacing: 5px; } */
